change java version to 1.8, trim,isEmpty활용 테스트